Fixed spacing issue, added Firestore support

--- a/src/App.css
+++ b/src/App.css
@@ -41,9 +41,8 @@
   background-color: white;
   display: grid;
   grid-template-columns: 85px 85px 85px 1fr;
-  grid-template-rows: 70px 2fr 3fr 3fr;
+  grid-template-rows: 70px 120px 1fr 1fr;
 }
-
 
 .title_card {
   border-style: solid;
@@ -62,8 +61,9 @@ h2 {
 .list {
   background-color: white;
   grid-row: 2;
-  grid-column: 1/span 4;
+  grid-column: 1/span4;
   padding: initial;
+  bottom-margin: 1px;
   font-size: 35px;
 }
 
